# DataAnalysisAndVisualizationProject

./: README.md  pyproject.toml
dataanalysisvisualizationfiles/code/: AL_Pipeline_Baselines.ipynb  ANN.py  ANN_as_clustering.ipynb  ANN_clustering_comparison.ipynb  ANN_evaluation.py  ANN_with_different_dist_metrics.py  ANNs.py  Active_learning_with_ANN_pipeline.py  active_learning_pipeline_single_label.py  distance_matrix_Cosine.pkl  distance_matrix_L2.pkl  full_pipeline.ipynb  full_pipeline.py  full_pipeline_single_label.ipynb  full_pipepline_carmel.ipynb  graphing & combinations pipeline.ipynb  index_matrix_InnerProduct.pkl  pipeline_active_learning_not_random_start.py  pipeline_edit_python.py  preprocess_data.py
dataanalysisvisualizationfiles/code/explorations/: AL_Pipeline_Baselines.ipynb  ANN_clustering_comparison.ipynb  ANN_evaluation.py  active_learning_pipeline_single_label.py  full_pipeline_single_label.ipynb  multilabel_pipeline.ipynb
dataanalysisvisualizationfiles/data/pickle_files/: distance_matrix_Annoy.pkl  index_matrix_Annoy.pkl  index_matrix_L2.pkl
dataanalysisvisualizationfiles/data/results/: AL_ANN_results_faissIP_academic_papers.txt  AL_ANN_results_faissIP_ecommerce.txt  AL_ANN_results_faissIP_imdb.txt  AL_ANN_results_faissIP_legal.txt  AL_ANN_results_faissIP_reviews.txt  AL_ANN_results_faissLSH_academic_papers.txt  AL_ANN_results_faissLSH_ecommerce.txt  AL_ANN_results_faissLSH_imdb.txt  AL_ANN_results_faissLSH_legal.txt  AL_ANN_results_faissLSH_reviews.txt
dataanalysisvisualizationfiles/research/code/: explore_datasets.ipynb
